--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "portfolio",
+  "name": "kva-slider",
   "version": "1.0.0",
-  "description": "new portfolio",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
